<resources>
    <string name="app_name">Arab Index In Germany</string>
    <string name="title_activity_main">Arab Index In Germany</string>
    <string name="title_activity_company_details">Company Details</string>
    <string name="action_settings">Settings</string>
    <string name="sCompanyName">* Enter Your Company Name</string>
    <string name="sContentDisc">Upload an Image</string>
    <string name="sAddress">* Enter the Address</string>
    <string name="sServices">* Which Services You Provide?</string>
    <string name="sParking">Parking Possibility? </string>
    <string name="sPayment">Which Payment methods you provide?</string>
    <string name="sAppointment">Is Appointment necessary? </string>
    <string name="sOtherServices">Other Services?</string>
    <string name="sNotes">Other Notes</string>
    <string name="sOHours">Opening Hours</string>
    <string name="sContact">* Contact Information</string>
    <string name="sSubmitButton">Submit</string>
    <string name="sEnterName">* Enter your Name</string>
    <string name="sEnterMail">* Enter your E-Mail Address</string>
    <string name="sEnterPass">* Enter a password</string>
    <string name="sEnterPass2">* Confirm your password</string>
    <string name="sSignUp">Sign up</string>
    <string name="sEnterYourPass">* Enter the password</string>
    <string name="sLoginButton">Login</string>
    <string name="sWrongLogin">Email or Password is wrong!</string>
    <string name="sLoginFailed">Login Failed</string>
    <string name="sDisplayName">Enter a Username</string>
    <string name="sNoAccount">You have no Account!\nYou can register here</string>
    <string name="continueButton">Continue</string>

    // Categories Spinner
    <string-array name="sCategories">
        <item>Medicine</item>
        <item>Haircut and Cosmetics</item>
        <item>Fast Food and Restaurants</item>
    </string-array>

    // Categories Spinner
    <string-array name="sStates">
        <item>Baden Württemberg</item>
        <item>Bavaria</item>
        <item>Berlin</item>
        <item>Brandenburg</item>
        <item>Bremen</item>
        <item>Hamburg</item>
        <item>Hesse</item>
        <item>Lower Saxony</item>
        <item>Mecklenburg Vorpommern</item>
        <item>North Rhine Westphalia</item>
        <item>Rhineland Palatinate</item>
        <item>Saarland</item>
        <item>Saxony</item>
        <item>Saxony Anhalt</item>
        <item>Schleswig Holstein</item>
        <item>Thuringia</item>
    </string-array>


    <string name="sDone">Done</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_remembered_companies">RememberedCompaniesActivity</string>


</resources>
