<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="kayali.developer.android.arabindexingermany.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter your current Email Address and Password to login:"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_shape"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:id="@+id/login_mail"
            android:hint="@string/sEnterMail"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/edit_shape"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:id="@+id/login_pass"
            android:hint="@string/sEnterYourPass"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sLoginButton"
            android:onClick="login"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:text="@string/sNoAccount"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="4dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:onClick="signUpUser"
            android:text="@string/sSignUp"/>

    </LinearLayout>


</LinearLayout>
