<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="kayali.developer.android.arabindexingermany.HomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sLoginButton"
        android:onClick="toLoginAct"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="36dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="18sp"
        android:text="@string/sNoAccount"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sSignUp"
        android:onClick="toSignUpUserAct"/>



</LinearLayout>
